k8s/overlays/osp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: order-service
    env: dev
    stage: dev
  name: order-service
  namespace: dev
spec:
  host: order-service-myhelsana-dev-az.osp-appl-preprod.hel.kko.ch
  port:
    targetPort: 8080-8080
  tls:
    termination: edge
  to:
    kind: Service
    name: order-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: order-service-myhelsana-dev-az.osp-appl-preprod.hel.kko.ch
      routerName: router
      wildcardPolicy: None
